--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -10,8 +10,8 @@
         android:title="@string/add_player"
         app:showAsAction="never" />
     <item
-        android:id="@+id/show_archived_players"
-        android:title="@string/show_archived"
+        android:id="@+id/paste_coming_players"
+        android:title="@string/paste_players"
         app:showAsAction="never" />
     <item
         android:id="@+id/make_teams"
@@ -20,5 +20,9 @@
     <item
         android:id="@+id/enter_results"
         android:title="@string/enter_results"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/show_archived_players"
+        android:title="@string/show_archived"
         app:showAsAction="never" />
 </menu>
