--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -59,7 +59,7 @@
                 android:id="@+id/nav_auth_logout"
                 android:icon="@drawable/help"
                 android:title="Logout"
-                android:visible="false" />
+                android:visible="true" />
         </group>
         <group
             android:id="@+id/menu_help"
@@ -68,6 +68,11 @@
                 android:id="@+id/nav_getting_started"
                 android:icon="@drawable/help"
                 android:title="Getting Started"
+                android:visible="true" />
+            <item
+                android:id="@+id/nav_about"
+                android:icon="@android:drawable/ic_dialog_info"
+                android:title="About"
                 android:visible="true" />
         </group>
     </group>
