fix sort by coming

--- a/app/src/main/res/layout/player_item.xml
+++ b/app/src/main/res/layout/player_item.xml
@@ -11,6 +11,7 @@
 
     <CheckBox
         android:id="@+id/player_coming"
+        android:textColor="@android:color/black"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="left"
