replace fab with buttons, enter result inside make teams, save player icon

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -21,4 +21,29 @@
         android:paddingBottom="100dp"
         android:visibility="visible" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="10dp">
+
+        <Button
+            android:id="@+id/main_add_player"
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_marginEnd="10dp"
+            android:text="New Player"
+            android:textAllCaps="false" />
+        <Button
+            android:id="@+id/main_make_teams"
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="10dp"
+            android:layout_gravity="center"
+            android:text="Make teams"
+            android:textAllCaps="false" />
+    </LinearLayout>
+
 </RelativeLayout>
