--- a/app/src/main/res/layout/layout_make_teams_activity.xml
+++ b/app/src/main/res/layout/layout_make_teams_activity.xml
@@ -5,11 +5,18 @@
     android:orientation="vertical">
 
     <Button
+        android:id="@+id/enter_game_result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Enter Results"
+        android:onClick="initSetResults" />
+
+    <Button
         android:id="@+id/set_game_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@android:color/transparent"
         android:visibility="gone"
         android:onClick="showDatePicker" />
 
@@ -32,14 +39,14 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="0"
-                android:visibility="gone" />
+                android:visibility="invisible" />
 
             <include
                 android:id="@+id/analysis_headers_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
-                android:visibility="invisible"
+                android:visibility="gone"
                 layout="@layout/player_team_analysis_item" />
 
             <ListView
@@ -72,14 +79,14 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="0"
-                android:visibility="gone" />
+                android:visibility="invisible" />
 
             <include
                 android:id="@+id/analysis_headers_2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
-                android:visibility="invisible"
+                android:visibility="gone"
                 layout="@layout/player_team_analysis_item" />
 
             <ListView
