--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,38 +8,28 @@
             <item
                 android:id="@+id/nav_players"
                 android:icon="@drawable/player"
-                android:title="Players" />
+                android:title="@string/nav_players" />
             <item
                 android:id="@+id/nav_games"
                 android:icon="@drawable/games"
-                android:title="Games History" />
+                android:title="@string/nav_games_history" />
             <item
                 android:id="@+id/nav_stats"
                 android:icon="@drawable/stats"
-                android:title="Statistics" />
-        </group>
-        <group
-            android:id="@+id/menu_settings"
-            android:checkableBehavior="none">
-            <item
-                android:id="@+id/nav_settings"
-                android:icon="@drawable/settings"
-                android:title="Settings"
-                android:visible="true" />
+                android:title="@string/nav_statistics" />
         </group>
         <group
             android:id="@+id/menu_snapshot"
-            android:checkableBehavior="none"
-            android:title="To file">
+            android:checkableBehavior="none">
             <item
                 android:id="@+id/nav_save_snapshot"
-                android:icon="@drawable/backup"
-                android:title="Backup to file"
+                android:icon="@drawable/nav_backup"
+                android:title="@string/nav_backup_to_file"
                 android:visible="true" />
             <item
                 android:id="@+id/nav_import_snapshot"
                 android:icon="@android:drawable/ic_menu_upload"
-                android:title="Import from file"
+                android:title="@string/nav_import_from_file"
                 android:visible="true" />
         </group>
         <group
@@ -47,32 +37,37 @@
             android:checkableBehavior="none">
             <item
                 android:id="@+id/nav_data_sync"
-                android:icon="@drawable/backup"
-                android:title="Sync to cloud"
+                android:icon="@drawable/nav_cloud_push"
+                android:title="@string/nav_sync_to_cloud"
                 android:visible="true" />
             <item
                 android:id="@+id/nav_data_pull"
-                android:icon="@android:drawable/ic_menu_upload"
-                android:title="Pull from cloud"
+                android:icon="@drawable/nav_cloud_pull"
+                android:title="@string/nav_pull_from_cloud"
                 android:visible="true" />
             <item
                 android:id="@+id/nav_auth_logout"
-                android:icon="@drawable/help"
-                android:title="Logout"
+                android:icon="@drawable/nav_logout"
+                android:title="@string/nav_logout"
                 android:visible="true" />
         </group>
         <group
             android:id="@+id/menu_help"
             android:checkableBehavior="none">
             <item
+                android:id="@+id/nav_settings"
+                android:icon="@drawable/nav_setting"
+                android:title="@string/nav_settings"
+                android:visible="true" />
+            <item
                 android:id="@+id/nav_getting_started"
-                android:icon="@drawable/help"
-                android:title="Getting Started"
+                android:icon="@drawable/nav_start"
+                android:title="@string/nav_getting_started"
                 android:visible="true" />
             <item
                 android:id="@+id/nav_about"
-                android:icon="@android:drawable/ic_dialog_info"
-                android:title="About"
+                android:icon="@drawable/nav_info"
+                android:title="@string/nav_about"
                 android:visible="true" />
         </group>
     </group>
