--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -23,7 +23,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="10dp"
         android:background="@color/colorPrimary"
@@ -36,7 +36,7 @@
             android:layout_gravity="center"
             android:layout_marginEnd="10dp"
             android:background="@color/fui_transparent"
-            android:text="New Player"
+            android:text="@string/new_player"
             android:textAllCaps="false"
             android:drawableStart="@drawable/new_player_icon"
             android:textColor="@android:color/white" />
