--- a/app/src/main/res/layout/layout_make_teams_activity.xml
+++ b/app/src/main/res/layout/layout_make_teams_activity.xml
@@ -4,14 +4,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <Button
-        android:id="@+id/set_game_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:onClick="showDatePicker"
-        android:visibility="gone" />
-
     <LinearLayout
         android:id="@+id/teams_list_area"
         android:layout_width="match_parent"
@@ -24,14 +16,6 @@
             android:layout_marginRight="3dp"
             android:layout_weight="3"
             android:orientation="vertical">
-
-            <Button
-                android:id="@+id/team_1_score"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="0"
-                android:visibility="invisible" />
 
             <include
                 android:id="@+id/analysis_headers_1"
@@ -64,14 +48,6 @@
             android:layout_marginLeft="3dp"
             android:layout_weight="3"
             android:orientation="vertical">
-
-            <Button
-                android:id="@+id/team_2_score"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="0"
-                android:visibility="invisible" />
 
             <include
                 android:id="@+id/analysis_headers_2"
@@ -153,6 +129,45 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/enter_result_views"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:visibility="gone">
+
+        <NumberPicker
+            android:id="@+id/team_1_score"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_marginEnd="20dp"
+            android:selectionDividerHeight="5dp"
+            android:theme="@style/NumberPickerText" />
+
+        <Button
+            android:id="@+id/set_game_date"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:background="@color/fui_transparent"
+            android:drawableStart="@drawable/button_date"
+            android:onClick="showDatePicker" />
+
+        <NumberPicker
+            android:id="@+id/team_2_score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginStart="20dp"
+            android:selectionDividerHeight="5dp"
+            android:theme="@style/NumberPickerText" />
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/buttons_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -166,7 +181,8 @@
             android:layout_weight="1"
             android:background="@android:color/transparent"
             android:drawableTop="@drawable/shuffle"
-            android:text="shuffle" />
+            android:text="@string/shuffle"
+            android:textAllCaps="false" />
 
         <Button
             android:id="@+id/move"
@@ -175,14 +191,18 @@
             android:layout_weight="1"
             android:background="@android:color/transparent"
             android:drawableTop="@drawable/move"
-            android:text="Move" />
+            android:text="@string/move_players"
+            android:textAllCaps="false" />
 
-        <ImageView
-            android:id="@+id/save"
+        <Button
+            android:id="@+id/save_results"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/save"
+            android:background="@android:color/transparent"
+            android:drawableTop="@drawable/save"
+            android:text="@string/save"
+            android:textAllCaps="false"
             android:visibility="gone" />
 
     </LinearLayout>
