--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -57,4 +57,7 @@
         <item name="textAllCaps">false</item>
     </style>
 
+    <style name="NumberPickerText">
+        <item name="android:textSize">18sp</item>
+    </style>
 </resources>
