--- a/app/src/main/res/layout/player_details_activity.xml
+++ b/app/src/main/res/layout/player_details_activity.xml
@@ -15,8 +15,8 @@
             android:id="@+id/player_tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
             app:tabTextAppearance="@style/AppTabTextAppearance" />
-
     </androidx.viewpager.widget.ViewPager>
 
 </LinearLayout>
