--- a/app/src/main/res/layout/player_statistics_item.xml
+++ b/app/src/main/res/layout/player_statistics_item.xml
@@ -1,67 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="42dp"
     android:gravity="center_vertical"
-    android:orientation="horizontal"
     android:layoutDirection="ltr"
-    android:paddingBottom="5dp"
+    android:orientation="horizontal"
     android:paddingLeft="3dp"
+    android:paddingTop="5dp"
     android:paddingRight="5dp"
-    android:paddingTop="5dp">
+    android:paddingBottom="5dp">
 
     <TextView
         android:id="@+id/stat_player_grade"
         android:layout_width="60dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_marginLeft="2dp"
         android:layout_marginRight="3dp"
         android:gravity="center"
-        android:textAppearance="@style/regularHeadline"
-        android:textSize="14sp" />
+        android:textAppearance="@style/regularText" />
 
     <TextView
         android:id="@+id/stat_games_count"
         android:layout_width="65dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_marginLeft="2dp"
-        android:gravity="center"
-        android:textAppearance="@style/regularHeadline"
-        android:textSize="14sp" />
+        android:gravity="center_vertical"
+        android:textAppearance="@style/regularText" />
 
     <TextView
         android:id="@+id/stat_success"
         android:layout_width="60dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_marginLeft="2dp"
         android:layout_marginRight="3dp"
         android:gravity="center"
-        android:textAppearance="@style/regularHeadline"
-        android:textSize="14sp" />
+        android:textAppearance="@style/regularText" />
 
     <TextView
         android:id="@+id/stat_wins_percentage"
         android:layout_width="60dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_marginLeft="2dp"
         android:layout_marginRight="3dp"
         android:gravity="center"
-        android:textAppearance="@style/regularHeadline"
-        android:textSize="14sp" />
+        android:textAppearance="@style/regularText" />
 
     <TextView
         android:id="@+id/player_name"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_weight="1"
-        android:gravity="right"
+        android:gravity="right|center_vertical"
         android:paddingRight="3dp"
-        android:textAppearance="@style/regularHeadline"
-        android:textSize="14sp" />
+        android:textAppearance="@style/regularText" />
 
 </LinearLayout>
