--- a/app/src/main/res/layout/game_item.xml
+++ b/app/src/main/res/layout/game_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="42dp"
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:layoutDirection="ltr"
@@ -16,20 +16,21 @@
         android:layout_height="wrap_content"
         android:layout_gravity="start|center_vertical"
         android:padding="1dp"
+        android:layout_marginLeft="5dp"
         android:visibility="gone" />
 
     <TextView
         android:id="@+id/game_result_set"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="start"
+        android:layout_gravity="start|center_vertical"
         android:padding="5dp" />
 
     <TextView
         android:id="@+id/game_player_grade"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="start"
+        android:layout_gravity="start|center_vertical"
         android:padding="5dp"
         android:visibility="gone" />
 
@@ -38,7 +39,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:gravity="end"
+        android:gravity="end|center_vertical"
         android:textSize="13sp"
         android:paddingEnd="5dp" />
 
