--- a/app/src/main/res/layout/layout_games_activity_fragment.xml
+++ b/app/src/main/res/layout/layout_games_activity_fragment.xml
@@ -6,16 +6,13 @@
     android:orientation="horizontal"
     android:layoutDirection="ltr"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <LinearLayout
         android:id="@+id/game_details_layout"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginEnd="5dp"
+        android:layout_marginEnd="10dp"
         android:layout_weight="1"
         android:orientation="vertical"
         android:visibility="gone">
@@ -62,13 +59,18 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:layout_weight="1">
+
+        <include
+            android:visibility="visible"
+            android:id="@+id/game_titles"
+            layout="@layout/game_item" />
 
         <ListView
             android:id="@+id/games_list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp" />
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
