--- a/app/src/main/res/menu/games_menu.xml
+++ b/app/src/main/res/menu/games_menu.xml
@@ -2,19 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_send_statistics"
-        android:title="@string/action_send_statistics"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_last_10_games"
-        android:title="@string/action_10_games"
-        app:showAsAction="never" />
-    <item
         android:id="@+id/action_last_50_games"
         android:title="@string/action_50_games"
         app:showAsAction="never" />
     <item
-        android:id="@+id/action_no_limit"
+        android:id="@+id/action_all_games"
         android:title="@string/action_all_games"
         app:showAsAction="never" />
 </menu>
