--- a/app/src/main/res/menu/make_teams_menu.xml
+++ b/app/src/main/res/menu/make_teams_menu.xml
@@ -12,5 +12,6 @@
     <item
         android:id="@+id/action_share"
         android:title="@string/action_share"
-        app:showAsAction="never" />
+        android:icon="@android:drawable/ic_menu_share"
+        app:showAsAction="always" />
 </menu>
