--- a/app/src/main/res/layout/game_item.xml
+++ b/app/src/main/res/layout/game_item.xml
@@ -3,20 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="42dp"
     android:gravity="center_vertical"
-    android:orientation="horizontal"
     android:layoutDirection="ltr"
-    android:paddingBottom="2dp"
+    android:orientation="horizontal"
     android:paddingLeft="5dp"
+    android:paddingTop="2dp"
     android:paddingRight="5dp"
-    android:paddingTop="2dp">
+    android:paddingBottom="2dp">
 
     <ImageView
         android:id="@+id/res_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start|center_vertical"
-        android:padding="1dp"
         android:layout_marginLeft="5dp"
+        android:padding="1dp"
         android:visibility="gone" />
 
     <TextView
@@ -24,7 +24,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start|center_vertical"
-        android:padding="5dp" />
+        android:padding="5dp"
+        android:textAppearance="@style/regularText" />
 
     <TextView
         android:id="@+id/game_player_grade"
@@ -32,6 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="start|center_vertical"
         android:padding="5dp"
+        android:textAppearance="@style/regularText"
         android:visibility="gone" />
 
     <TextView
@@ -40,7 +42,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="end|center_vertical"
-        android:textSize="13sp"
-        android:paddingEnd="5dp" />
+        android:paddingEnd="5dp"
+        android:textAppearance="@style/regularText"
+        android:textSize="13sp" />
 
 </LinearLayout>
