--- a/app/src/main/res/layout/layout_make_teams_activity.xml
+++ b/app/src/main/res/layout/layout_make_teams_activity.xml
@@ -133,17 +133,17 @@
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:layout_gravity="center"
-        android:gravity="center"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
+        android:gravity="center"
         android:visibility="gone">
 
         <NumberPicker
             android:id="@+id/team_1_score"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             android:layout_marginEnd="20dp"
+            android:layout_weight="1"
             android:selectionDividerHeight="5dp"
             android:theme="@style/NumberPickerText" />
 
@@ -151,8 +151,8 @@
             android:id="@+id/set_game_date"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_gravity="center"
+            android:layout_weight="1"
             android:background="@color/fui_transparent"
             android:drawableStart="@drawable/button_date"
             android:onClick="showDatePicker" />
@@ -161,8 +161,8 @@
             android:id="@+id/team_2_score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginStart="20dp"
+            android:layout_weight="1"
             android:selectionDividerHeight="5dp"
             android:theme="@style/NumberPickerText" />
     </LinearLayout>
@@ -172,24 +172,44 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_margin="30dp">
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp">
 
-        <Button
-            android:id="@+id/shuffle"
+        <LinearLayout
+            android:id="@+id/shuffle_views"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@android:color/transparent"
-            android:drawableTop="@drawable/shuffle"
-            android:text="@string/shuffle"
-            android:textAllCaps="false" />
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/shuffle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@color/fui_transparent"
+                android:drawableTop="@drawable/shuffle"
+                android:text="@string/shuffle_grade"
+                android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/shuffle_options"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:background="@color/fui_transparent"
+                android:drawableStart="@drawable/more"
+                android:textAllCaps="false" />
+        </LinearLayout>
 
         <Button
             android:id="@+id/move"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@android:color/transparent"
+            android:background="@color/fui_transparent"
             android:drawableTop="@drawable/move"
             android:text="@string/move_players"
             android:textAllCaps="false" />
@@ -199,11 +219,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@android:color/transparent"
+            android:background="@color/fui_transparent"
             android:drawableTop="@drawable/save"
-            android:text="@string/save"
+            android:text="@string/action_button_results"
             android:textAllCaps="false"
-            android:visibility="gone" />
+            android:visibility="visible" />
 
     </LinearLayout>
 
