--- a/app/src/main/res/layout/player_statistics_item.xml
+++ b/app/src/main/res/layout/player_statistics_item.xml
@@ -27,6 +27,7 @@
         android:layout_gravity="center"
         android:layout_marginLeft="2dp"
         android:gravity="center_vertical"
+        android:importantForAccessibility="no"
         android:textAppearance="@style/regularText" />
 
     <TextView
