--- a/app/src/main/res/layout/layout_participation_fragment.xml
+++ b/app/src/main/res/layout/layout_participation_fragment.xml
@@ -7,9 +7,20 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+    <SearchView
+        android:id="@+id/player_participation_search_players"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:queryHint="Filter by name"
+        android:visibility="gone" />
+
     <include
         android:id="@+id/titles"
-        layout="@layout/player_participation_item" />
+        layout="@layout/player_participation_item"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/stat_search_players"
+        android:layout_marginTop="5dp" />
 
     <ListView
         android:id="@+id/players_participation_list"
