--- a/app/src/main/res/menu/players_menu.xml
+++ b/app/src/main/res/menu/players_menu.xml
@@ -14,6 +14,10 @@
         android:title="@string/paste_players"
         app:showAsAction="never" />
     <item
+        android:id="@+id/search_players"
+        android:title="@string/search_title"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/make_teams"
         android:title="@string/make_teams"
         app:showAsAction="never" />
