--- a/app/src/main/res/layout/player_crad_fragment.xml
+++ b/app/src/main/res/layout/player_crad_fragment.xml
@@ -16,8 +16,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -29,6 +29,7 @@
                 android:hint="@string/name"
                 android:inputType="text"
                 android:minWidth="80dp"
+                android:minHeight="48dp"
                 android:singleLine="true"
                 android:textSize="18sp" />
         </LinearLayout>
@@ -36,8 +37,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:orientation="horizontal">
 
             <TextView
@@ -55,14 +56,15 @@
                 android:gravity="center"
                 android:hint="@string/grade"
                 android:inputType="number"
+                android:minHeight="48dp"
                 android:singleLine="true" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:orientation="horizontal">
 
             <TextView
@@ -80,6 +82,7 @@
                 android:background="?attr/editTextBackground"
                 android:gravity="center"
                 android:hint="@string/age"
+                android:minHeight="48dp"
                 android:textAppearance="?android:attr/textAppearanceMediumInverse"
                 android:textColor="?attr/editTextColor"
                 android:textSize="18sp" />
@@ -96,8 +99,8 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginTop="5dp"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <TextView
