--- a/app/src/main/res/menu/make_teams_menu.xml
+++ b/app/src/main/res/menu/make_teams_menu.xml
@@ -4,7 +4,8 @@
     <item
         android:id="@+id/action_analysis"
         android:title="@string/action_analysis"
-        app:showAsAction="never" />
+        android:icon="@drawable/analyze"
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_enter_results"
         android:title="@string/action_enter_results"
@@ -12,6 +13,6 @@
     <item
         android:id="@+id/action_share"
         android:title="@string/action_share"
-        android:icon="@android:drawable/ic_menu_share"
+        android:icon="@drawable/share"
         app:showAsAction="always" />
 </menu>
